change project structure

--- a/mt_sat/nextflow.config
+++ b/mt_sat/nextflow.config
@@ -52,7 +52,7 @@ params {
         
         //** Enable/disable B1+ correction (true/false). **//    
         
-        USE_B1=false
+        USE_B1=true
         COR_B1=0.4
 
         //** Enable/disable skull stripping (true/false). **//  
