unify parameter names

--- a/mt_sat/nextflow.config
+++ b/mt_sat/nextflow.config
@@ -32,32 +32,32 @@ params {
     //** === (1) PLATFORM SETTINGS === **//     
             
         //** Options: "matlab" OR "octave"
-        //** WHEN DOCKER ENABLED, PLATFORM must be set to "octave"**// 
+        //** WHEN DOCKER ENABLED, platform must be set to "octave"**// 
 
-        PLATFORM="octave"
+        platform="octave"
             
         //** WHEN DOCKER ENABLED set the following *_PATH variables to null. **// 
         //** PATH variable should point to the executable of the selected PLATFORM (MATLAB OR Octave). **//
 
-        MATLAB_PATH = null
+        matlab_path = null
 
-        OCTAVE_PATH = null
+        octave_path = null
 
         //** WHEN DOCKER DISABLED, define qMRLab's (>v2.3.1) root dir. **// 
         //** WHEN DOCKER ENABLED, set qMRLab_DIR to null. **//
         
-        qMRLab_DIR = null
+        qmrlab_dir = null
 
      //** === (2) PROCESS SPECIFIC SETTINGS === **// 
         
         //** Enable/disable B1+ correction (true/false). **//    
         
-        USE_B1=true
-        COR_B1=0.4
+        use_b1=true
+        b1cor_factor=0.4
 
         //** Enable/disable skull stripping (true/false). **//  
 
-        USE_BET=true
+        use_bet=true
     
     //**ANTs registration parameters//
         ants_dim=3
