better wrapper version controlling

--- a/mt_sat/nextflow.config
+++ b/mt_sat/nextflow.config
@@ -47,6 +47,9 @@ params {
         //** WHEN DOCKER ENABLED, set qMRLab_DIR to null. **//
         
         qmrlab_dir = null
+        
+        // ** IMPORTANT: ** //    
+        wrapper_version = "latest" 
 
      //** === (2) PROCESS SPECIFIC SETTINGS === **// 
         
