major addition on B1

--- a/mt_sat/nextflow.config
+++ b/mt_sat/nextflow.config
@@ -5,6 +5,15 @@ process {
     withName:Extract_Brain {
         container = 'qmrlab/antsfsl:latest'
     }
+    withName:B1_Align {
+        container = 'qmrlab/antsfsl:latest'
+    }
+    withName:B1_Smooth_With_Mask {
+        container = 'qmrlab/minimal:v2.3.1'
+    }
+    withName:B1_Smooth_Without_Mask {
+        container = 'qmrlab/minimal:v2.3.1'
+    }
     withName:Fit_MTsat_With_B1map_With_Bet {
         container = 'qmrlab/minimal:v2.3.1'
     }
@@ -30,39 +39,21 @@ docker {
 params {
          
     //** === (1) PLATFORM SETTINGS === **//     
-            
-        //** Options: "matlab" OR "octave"
-        //** WHEN DOCKER ENABLED, platform must be set to "octave"**// 
-
+      
         platform="octave"
-            
-        //** WHEN DOCKER ENABLED set the following *_PATH variables to null. **// 
-        //** PATH variable should point to the executable of the selected PLATFORM (MATLAB OR Octave). **//
-
+    
         matlab_path = null
 
         octave_path = null
-
-        //** WHEN DOCKER DISABLED, define qMRLab's (>v2.3.1) root dir. **// 
-        //** WHEN DOCKER ENABLED, set qMRLab_DIR to null. **//
         
         qmrlab_dir = null
         
-        // ** IMPORTANT: ** //    
         wrapper_version = "latest" 
 
-     //** === (2) PROCESS SPECIFIC SETTINGS === **// 
+    //** === (2) PROCESS SPECIFIC SETTINGS === **// 
+                 
+    //** ANTs input alignment (to T1w) parameters //
         
-        //** Enable/disable B1+ correction (true/false). **//    
-        
-        use_b1=true
-        b1cor_factor=0.4
-
-        //** Enable/disable skull stripping (true/false). **//  
-
-        use_bet=true
-    
-    //**ANTs registration parameters//
         ants_dim=3
         ants_metric="MI"
         ants_metric_weight=1
@@ -74,8 +65,17 @@ params {
         ants_shrink="8x4x2x1"
         ants_smoothing = "3x2x1x0vox"
 
-    //**BET Brain extraction parameters**//    
+    //** BET Brain extraction parameters **//    
+       
+        use_bet=true
         bet_recursive=true
         bet_threshold=0.45
-
+    
+    //** B1+ correction parameters **//  
+        use_b1cor=true
+        b1cor_factor=0.4  
+        b1_filter_type = "polynomial"
+        b1_filter_dim = "3D"
+        b1_filter_order = 6
+        b1_filter_size = "[3 3 3]"
 }
