matlab octave hybrid

--- a/mt_sat/nextflow.config
+++ b/mt_sat/nextflow.config
@@ -8,9 +8,6 @@ process {
     withName:B1_Align {
         container = 'qmrlab/antsfsl:latest'
     }
-    withName:B1_Smooth_With_Mask {
-        container = 'qmrlab/minimal:v2.3.1'
-    }
     withName:B1_Smooth_Without_Mask {
         container = 'qmrlab/minimal:v2.3.1'
     }
@@ -46,9 +43,13 @@ params {
 
         octave_path = null
         
-        qmrlab_dir = null
+        qmrlab_path = null
         
-        wrapper_version = "latest" 
+        wrapper_version = "debug" 
+
+        matlab_path_exception = "/Applications/MATLAB_R2018a.app/bin/matlab"
+
+        qmrlab_path_exception = "/Users/Agah/Desktop/neuropoly/qMRLab"
 
     //** === (2) PROCESS SPECIFIC SETTINGS === **// 
                  
@@ -74,8 +75,9 @@ params {
     //** B1+ correction parameters **//  
         use_b1cor=true
         b1cor_factor=0.4  
-        b1_filter_type = "polynomial"
-        b1_filter_dim = "3D"
+        b1_filter_siemens = true
+        b1_filter_type = "median"
+        b1_filter_dimension = "3D"
         b1_filter_order = 6
         b1_filter_size = "[3 3 3]"
 }
