process specific matlab exception

--- a/mt_sat/nextflow.config
+++ b/mt_sat/nextflow.config
@@ -51,6 +51,9 @@ params {
 
         qmrlab_path_exception = "/Users/Agah/Desktop/neuropoly/qMRLab"
 
+        //**matlab_path_exception = null**//
+        //**qmrlab_path_exception = null**//
+
     //** === (2) PROCESS SPECIFIC SETTINGS === **// 
                  
     //** ANTs input alignment (to T1w) parameters //
@@ -76,8 +79,8 @@ params {
         use_b1cor=true
         b1cor_factor=0.4  
         b1_filter_siemens = true
-        b1_filter_type = "median"
-        b1_filter_dimension = "3D"
+        b1_filter_type = "polynomial"
+        b1_filter_dimension = "2D"
         b1_filter_order = 6
         b1_filter_size = "[3 3 3]"
 }
