add simple steps

--- a/mt_sat/nextflow.config
+++ b/mt_sat/nextflow.config
@@ -45,14 +45,10 @@ params {
         
         qmrlab_path = null
         
-        wrapper_version = "debug" 
+        wrapper_version = "v1.0.0" 
 
-        matlab_path_exception = "/Applications/MATLAB_R2018a.app/bin/matlab"
-
-        qmrlab_path_exception = "/Users/Agah/Desktop/neuropoly/qMRLab"
-
-        //**matlab_path_exception = null**//
-        //**qmrlab_path_exception = null**//
+        matlab_path_exception = null
+        qmrlab_path_exception = null
 
     //** === (2) PROCESS SPECIFIC SETTINGS === **// 
                  
