Update container and add variables for dataset_description

--- a/mt_sat/nextflow.config
+++ b/mt_sat/nextflow.config
@@ -9,19 +9,19 @@ process {
         container = 'qmrlab/antsfsl:latest'
     }
     withName:B1_Smooth_Without_Mask {
-        container = 'qmrlab/minimal:v2.3.1'
+        container = 'agahkarakuzu/qmrfocal:vtest'
     }
     withName:Fit_MTsat_With_B1map_With_Bet {
-        container = 'qmrlab/minimal:v2.3.1'
+        container = 'agahkarakuzu/qmrfocal:vtest'
     }
     withName:Fit_MTsat_With_B1map_Without_Bet {
-        container = 'qmrlab/minimal:v2.3.1'
+        container = 'agahkarakuzu/qmrfocal:vtest'
     }
     withName:Fit_MTsat_Without_B1map_With_Bet {
-        container = 'qmrlab/minimal:v2.3.1'
+        container = 'agahkarakuzu/qmrfocal:vtest'
     }
     withName:Fit_MTsat_Without_B1map_Without_Bet {
-        container = 'qmrlab/minimal:v2.3.1'
+        container = 'agahkarakuzu/qmrfocal:vtest'
     }
    
 }
@@ -46,7 +46,7 @@ params {
         
         qmrlab_path = null
         
-        wrapper_version = "v1.0.0" 
+        wrapper_version = "mt_sat-argparser" 
 
         matlab_path_exception = null
         qmrlab_path_exception = null
@@ -80,4 +80,12 @@ params {
         b1_filter_dimension = "2D"
         b1_filter_order = 6
         b1_filter_size = "[3 3 3]"
+
+    //** === (3) DESCRIPTION_DATASET.JSON SETTINGS === **// 
+
+	params.description = "qMRFlow mt_sat pipeline has been executed"
+	params.datasetDOI = "DOI 10.17605/OSF.IO/K4BS5"
+	params.datasetURL = "https://osf.iok4bs5/"
+	params.datasetVersion = "1"
+
 }
