--- a/mt_sat/nextflow.config
+++ b/mt_sat/nextflow.config
@@ -83,9 +83,11 @@ params {
 
     //** === (3) DESCRIPTION_DATASET.JSON SETTINGS === **// 
 
-	params.description = "qMRFlow mt_sat pipeline has been executed"
-	params.datasetDOI = "DOI 10.17605/OSF.IO/K4BS5"
-	params.datasetURL = "https://osf.iok4bs5/"
-	params.datasetVersion = "1"
+	//** This is a temporary solution. Variable $workflow.container prints emtpy map instead of container name. See issue: https://github.com/nextflow-io/nextflow/issues/1758. **//
+	containerTag = null
+	description = "qMRFlow mt_sat pipeline has been executed"
+	datasetDOI = ""
+	datasetURL = ""
+	datasetVersion = ""
 
 }
