Add option to get B1+ filtered

--- a/b1_afi/nextflow.config
+++ b/b1_afi/nextflow.config
@@ -59,6 +59,13 @@ params {
         bet_recursive=true
         bet_threshold=0.45
 
+    //** B1+ filtered map **//  
+        b1_filter = true
+        b1_filter_type = "polynomial"
+        b1_filter_dimension = "3D"
+        b1_filter_order = 6
+        b1_filter_size = "[3 3 3]"
+
     //** === (3) DESCRIPTION_DATASET.JSON SETTINGS === **// 
 
 	//** This is a temporary solution. Variable $workflow.container prints emtpy map instead of container name. See issue: https://github.com/nextflow-io/nextflow/issues/1758. **//
