--- a/vfa_t1/nextflow.config
+++ b/vfa_t1/nextflow.config
@@ -11,16 +11,16 @@ process {
     withName:B1_Smooth_Without_Mask {
         container = 'qmrlab/minimal:v2.3.1'
     }
-    withName:Fit_MTsat_With_B1map_With_Bet {
+    withName:Fit_VFAT1_With_B1map_With_Bet {
         container = 'qmrlab/minimal:v2.3.1'
     }
-    withName:Fit_MTsat_With_B1map_Without_Bet {
+    withName:Fit_VFAT1_With_B1map_Without_Bet {
         container = 'qmrlab/minimal:v2.3.1'
     }
-    withName:Fit_MTsat_Without_B1map_With_Bet {
+    withName:Fit_VFAT1_Without_B1map_With_Bet {
         container = 'qmrlab/minimal:v2.3.1'
     }
-    withName:Fit_MTsat_Without_B1map_Without_Bet {
+    withName:Fit_VFAT1_Without_B1map_Without_Bet {
         container = 'qmrlab/minimal:v2.3.1'
     }
    
@@ -30,7 +30,7 @@ process {
 //** See more at: https://github.com/qMRLab/qMRflow **//
 
 docker {
-    enabled = true
+    enabled = false
 }
 
 
@@ -38,13 +38,13 @@ params {
          
     //** === (1) PLATFORM SETTINGS === **//     
       
-        platform="octave"
+        platform="matlab"
     
-        matlab_path = null
+        matlab_path = "/usr/local/MATLAB/R2018b/bin/matlab"
 
         octave_path = null
         
-        qmrlab_path = null
+        qmrlab_path = "/usr/local/qMRLab/qMRLab"
         
         wrapper_version = "v1.0.0" 
 
@@ -53,7 +53,7 @@ params {
 
     //** === (2) PROCESS SPECIFIC SETTINGS === **// 
                  
-    //** ANTs input alignment (to T1w) parameters //
+    //** ANTs input alignment (to vfa1) parameters //
         
         ants_dim=3
         ants_metric="MI"
@@ -68,16 +68,25 @@ params {
 
     //** BET Brain extraction parameters **//    
        
-        use_bet=true
+        use_bet=false
         bet_recursive=true
         bet_threshold=0.45
     
     //** B1+ correction parameters **//  
-        use_b1cor=true
+        use_b1cor=false
         b1cor_factor=0.4  
         b1_filter_siemens = true
         b1_filter_type = "polynomial"
         b1_filter_dimension = "2D"
         b1_filter_order = 6
         b1_filter_size = "[3 3 3]"
+
+    //** === (3) DESCRIPTION_DATASET.JSON SETTINGS === **// 
+
+	//** This is a temporary solution. Variable $workflow.container prints emtpy map instead of container name. See issue: https://github.com/nextflow-io/nextflow/issues/1758. **//
+	containerTag = null
+	description = "qMRFlow vfa_t1 pipeline has been executed"
+	datasetDOI = ""
+	datasetURL = ""
+	datasetVersion = ""
 }
