--- a/vfa_t1/nextflow.config
+++ b/vfa_t1/nextflow.config
@@ -68,7 +68,7 @@ params {
 
     //** BET Brain extraction parameters **//    
        
-        use_bet=false
+        use_bet=true
         bet_recursive=true
         bet_threshold=0.45
     
