Need to deal with repeated process

--- a/vfa_t1/nextflow.config
+++ b/vfa_t1/nextflow.config
@@ -55,31 +55,25 @@ params {
                  
     //** ANTs input alignment (to vfa1) parameters //
         
-        ants_dim=3
+        ants_dim=2
         ants_metric="MI"
         ants_metric_weight=1
         ants_metric_bins=32
         ants_metric_sampling="Regular"
         ants_metric_samplingprct=0.25
         ants_transform="Rigid[0.1]"
-        ants_convergence="[1000x500x250x100,1e-6,10]"
-        ants_shrink="8x4x2x1"
-        ants_smoothing = "3x2x1x0vox"
+        ants_convergence="[500x250x100,1e-6,10]"
+        ants_shrink="4x2x1"
+        ants_smoothing = "2x1x0vox"
 
     //** BET Brain extraction parameters **//    
        
-        use_bet=true
+        use_bet=false
         bet_recursive=true
         bet_threshold=0.45
     
-    //** B1+ correction parameters **//  
-        use_b1cor=false
-        b1cor_factor=0.4  
-        b1_filter_siemens = true
-        b1_filter_type = "polynomial"
-        b1_filter_dimension = "2D"
-        b1_filter_order = 6
-        b1_filter_size = "[3 3 3]"
+    //** B1+ correction **//  
+        use_b1cor=true
 
     //** === (3) DESCRIPTION_DATASET.JSON SETTINGS === **// 
 
