Add four fitting processes

--- a/vfa_t1/nextflow.config
+++ b/vfa_t1/nextflow.config
@@ -68,12 +68,12 @@ params {
 
     //** BET Brain extraction parameters **//    
        
-        use_bet=false
+        use_bet=true
         bet_recursive=true
         bet_threshold=0.45
     
     //** B1+ correction **//  
-        use_b1cor=true
+        use_b1map=true
 
     //** === (3) DESCRIPTION_DATASET.JSON SETTINGS === **// 
 
