Fix bug in alignment process

--- a/vfa_t1/nextflow.config
+++ b/vfa_t1/nextflow.config
@@ -46,7 +46,7 @@ params {
         
         qmrlab_path = "/usr/local/qMRLab/qMRLab"
         
-        wrapper_version = "v1.0.0" 
+        wrapper_version = "vfa_t1" 
 
         matlab_path_exception = null
         qmrlab_path_exception = null
@@ -68,7 +68,7 @@ params {
 
     //** BET Brain extraction parameters **//    
        
-        use_bet=true
+        use_bet=false
         bet_recursive=true
         bet_threshold=0.45
     
