Adaptation for the generic wrapper

--- a/mt_sat/nextflow.config
+++ b/mt_sat/nextflow.config
@@ -30,23 +30,25 @@ process {
 //** See more at: https://github.com/qMRLab/qMRflow **//
 
 docker {
-    enabled = true
+    enabled = false
 }
 
 
 params {
+
+	qMR_suffix="MTS"
          
     //** === (1) PLATFORM SETTINGS === **//     
       
-        platform="octave"
+        platform="matlab"
     
-        matlab_path = null
+        matlab_path = "/usr/local/MATLAB/R2018b/bin/matlab"
 
         octave_path = null
         
-        qmrlab_path = null
+        qmrlab_path = "/usr/local/qMRLab/qMRLab"
         
-        wrapper_version = "mt_sat-argparser" 
+        wrapper_version = null
 
         matlab_path_exception = null
         qmrlab_path_exception = null
