Add optional BET to workflow

--- a/mp2rage/nextflow.config
+++ b/mp2rage/nextflow.config
@@ -1,8 +1,17 @@
 process {
-    withName:Fit_MP2RAGE_With_B1map {
+    withName:Extract_Brain {
+        container = 'qmrlab/antsfsl:latest'
+    }
+    withName:Fit_MP2RAGE_With_B1map_With_Bet {
         container = 'qmrlab/minimal:v2.3.1'
     }
-    withName:Fit_MP2RAGE_Without_B1map {
+    withName:Fit_MP2RAGE_With_B1map_Without_Bet {
+        container = 'qmrlab/minimal:v2.3.1'
+    }
+    withName:Fit_MP2RAGE_Without_B1map_With_Bet {
+        container = 'qmrlab/minimal:v2.3.1'
+    }
+    withName:Fit_MP2RAGE_Without_B1map_Without_Bet {
         container = 'qmrlab/minimal:v2.3.1'
     }
    
@@ -39,7 +48,7 @@ params {
        
         use_bet=false
         bet_recursive=true
-        bet_threshold=0.45
+        bet_threshold=0.25
                    
     //** B1+ correction (optional) **//  
         use_b1map=true
